--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   },
   "dependencies": {
     "@prisma/client": "^5.19.0",
+    "@types/cors": "^2.8.19",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "date-fns": "^3.6.0",
     "jsonwebtoken": "^9.0.2",
     "next": "^14.2.0",
